--- a/Performance Evaluation of Supervised Machine Learning Algorithms for Intrusion Detection.ipynb
+++ b/Performance Evaluation of Supervised Machine Learning Algorithms for Intrusion Detection.ipynb
@@ -24,27 +24,41 @@
     "- KDDTest-21.ARFF: A subset of the KDDTest+.arff file which does not include records with difficulty level of 21 out of 21\n",
     "- KDDTest-21.TXT: A subset of the KDDTest+.txt file which does not include records with difficulty level of 21 out of 21\n",
     "\n",
-    "We will be using KDDTrain+."
+    "We will be using KDDTrain+ as train and KDDTest+ as test datasets."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These data sets contain the records of the internet traffic seen by a simple intrusion detection network and are the ghosts of the traffic encountered by a real IDS and just the traces of its existence remains. The data set contains 43 features per record, with 41 of the features referring to the traffic input itself and the last two are labels (whether it is a normal or attack) and Score (the severity of the traffic input itself).\n",
+    "### Attacks\n",
+    "The NSL-KDD data set contains a total of 39 attacks which can be classified into 4 categories: Denial of Service (DoS), Probe, User to Root(U2R), and Remote to Local (R2L). These attacks are identified based on the combination of the 41 features available. A brief description of each category can be seen below:\n",
     "\n",
-    "Within the data set exists 4 different classes of attacks: Denial of Service (DoS), Probe, User to Root(U2R), and Remote to Local (R2L). A brief description of each attack can be seen below:\n",
-    "1. DoS is an attack that tries to shut down traffic flow to and from the target system. The IDS is flooded with an abnormal amount of traffic, which the system can’t handle, and shuts down to protect itself. This prevents normal traffic from visiting a network. An example of this could be an online retailer getting flooded with online orders on a day with a big sale, and because the network can’t handle all the requests, it will shut down preventing paying customers to purchase anything. This is the most common attack in the data set.\n",
-    "2. Probe or surveillance is an attack that tries to get information from a network. The goal here is to act like a thief and steal important information, whether it be personal information about clients or banking information.\n",
-    "3. U2R is an attack that starts off with a normal user account and tries to gain access to the system or network, as a super-user (root). The attacker attempts to exploit the vulnerabilities in a system to gain root privileges/access.\n",
-    "4. R2L is an attack that tries to gain local access to a remote machine. An attacker does not have local access to the system/network, and tries to “hack” their way into the network.\n",
+    "1. DoS is an attack that tries to shut down traffic flow to and from the target system. The IDS is flooded with an abnormal amount of traffic, which the system can’t handle, and shuts down to protect itself. This prevents normal traffic from visiting a network. An example of this could be an online retailer getting flooded with online orders on a day with a big sale, and because the network can’t handle all the requests, it will shut down preventing paying customers to purchase anything. This is the most common attack in the data set. Examples: Neptune, Teardrop and Smurf.\n",
+    "\n",
+    "\n",
+    "2. Probe or surveillance is an attack that tries to get information from a network. The goal here is to act like a thief and steal important information, whether it be personal information about clients or banking information. Examples: ipsweep, nmap attacks.\n",
+    "\n",
+    "\n",
+    "3. U2R is an attack that starts off with a normal user account and tries to gain access to the system or network, as a super-user (root). The attacker attempts to exploit the vulnerabilities in a system to gain root privileges/access. Examples: Perl, Load Module and Eject attacks.\n",
+    "\n",
+    "\n",
+    "4. R2L is an attack that tries to gain local access to a remote machine. An attacker does not have local access to the system/network, and tries to “hack” their way into the network. Examples: imap, guess password and ftp-write attacks.\n",
     "\n",
     "It is noticed from the descriptions above that DoS acts differently from the other three attacks, where DoS attempts to shut down a system to stop traffic flow altogether, whereas the other three attempts to quietly infiltrate the system undetected."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading the Datasets and Initial Exploration\n",
+    "Let's begin with importing the necessary modules."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +79,13 @@
     "\n",
     "from warnings import filterwarnings\n",
     "filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the '.txt' files are stored in CSV format."
    ]
   },
   {
@@ -422,42 +443,33 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('/home/hp/Downloads/NSL-KDD/KDDTrain+.txt', header=None)\n",
-    "df_test = pd.read_csv('/home/hp/Downloads/NSL-KDD/KDDTest+.txt', header=None)\n",
-    "df"
+    "train = pd.read_csv('KDDTrain+.txt', header=None)\n",
+    "test = pd.read_csv('KDDTest+.txt', header=None)\n",
+    "train"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.concat([df,df_test],axis=0, ignore_index=True)"
+    "These data sets contain the records of the internet traffic seen by a simple intrusion detection network and are the ghosts of the traffic encountered by a real IDS and just the traces of its existence remains. The data set contains 43 features per record, with 41 of the features referring to the traffic input itself and the last two are labels (whether it is a normal or attack) and Score (the severity of the traffic input itself).\n",
+    "\n",
+    "A description of each feature and a breakdown of the data set can be seen in the google spreadsheet [here](https://docs.google.com/spreadsheets/d/1oAx320Vo9Z6HrBrL6BcfLH6sh2zIk9EKCv2OlaMGmwY/edit#gid=0)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['target'] = df.iloc[:,41].apply(lambda x: 0 if x == 'normal' else 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns=[41,42], inplace=True)"
+    "**Enter reason for concatenation and explain why columns are dropped**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -809,8 +821,16 @@
     }
    ],
    "source": [
-    "df"
+    "train = pd.concat([train,test],axis=0, ignore_index=True)\n",
+    "train['target'] = train.iloc[:,41].apply(lambda x: 0 if x == 'normal' else 1)\n",
+    "train.drop(columns=[41,42], inplace=True)\n",
+    "train"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -822,9 +842,14 @@
     "\n",
     "encoder = LabelEncoder()\n",
     "for col in categorical:\n",
-    "    df.iloc[:,col] = pd.Series(encoder.fit_transform(df.iloc[:,col]))\n",
+    "    train.iloc[:,col] = pd.Series(encoder.fit_transform(train.iloc[:,col]))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -832,12 +857,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns='target',axis=1)\n",
-    "y = df.target\n",
+    "X = train.drop(columns='target',axis=1)\n",
+    "y = train.target\n",
     "scaler = StandardScaler()\n",
     "scaled_X = pd.DataFrame(scaler.fit_transform(X))\n",
     "\n",
     "X_train,X_test,y_train,y_test = train_test_split(scaled_X,y,random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
    ]
   },
   {
@@ -917,6 +949,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support Vector Machine"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -959,6 +998,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -998,6 +1044,13 @@
     "print(\"Average weighted precision: \",precision_score(y_test,pred_lg))\n",
     "print(\"Average weighted recall: \",recall_score(y_test,pred_lg))\n",
     "print(\"Average weighted f1 score: \",f1_score(y_test,pred_lg))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian Naive Bayes"
    ]
   },
   {
@@ -1083,6 +1136,11 @@
     "print(\"Average weighted recall: \",recall_score(y_test,pred_gb))\n",
     "print(\"Average weighted f1 score: \",f1_score(y_test,pred_gb))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1279,7 +1337,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
